# learning-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  compile_commands.json
.cache/clangd/index/: context.c.FDEA9E58B25D16C9.idx  egl_context.c.0FE1015A20FB3258.idx  engine.cpp.4CBB6051E8E2EE99.idx  engine.hpp.12A9C9987D5428C9.idx  glfw3.h.9793B3C6868563BC.idx  glx_context.c.43C3D96EC5738F1C.idx  init.c.D3F30E4403769642.idx  input.c.5CFD4877F32997D2.idx  internal.h.A80C8F68BD76F33D.idx  linux_joystick.c.63DA60F04A42DDEF.idx  linux_joystick.h.EDACEA7354A8351F.idx  main.cpp.E906BBAE0882F3CF.idx  mappings.h.421CD5796BFD1943.idx  monitor.c.C7D18622BF840DF9.idx  null_init.c.0F472FB48A1191CF.idx  null_joystick.c.96D5B5AF07FC32CE.idx  null_joystick.h.012D7F434E26FC20.idx  null_monitor.c.F5F2CEBEBCE346D6.idx  null_platform.h.76ECB79E7F460E6C.idx  null_window.c.E16F7802F2526394.idx  osmesa_context.c.0F6219F44A186C3A.idx  platform.c.47B530659FA3DCB6.idx  platform.h.A1E2B650D5B07908.idx  posix_module.c.E5110D54BC44C823.idx  posix_poll.c.CD6B29ED57E4299C.idx  posix_poll.h.D1B3CB0219D31990.idx  posix_thread.c.501D204321A7C140.idx  posix_thread.h.CE772232BAAA0CE0.idx  posix_time.c.F18752A70BBF59C7.idx  posix_time.h.4E4939757718C42B.idx  vulkan.c.8DBFE519AE27138F.idx  window.c.596A69965A1587AA.idx  x11_init.c.250C542041B8EE0C.idx  x11_monitor.c.25515135F8B53BA5.idx  x11_platform.h.1BE7153A2FCD447E.idx  x11_window.c.C253A98CB2497128.idx  xkb_unicode.c.B43E20BBB94F8F63.idx  xkb_unicode.h.F98592CCC0EB5160.idx
app/: CMakeLists.txt
app/src/: main.cpp
engine/: CMakeLists.txt
engine/include/engine/: engine.hpp
engine/src/: engine.cpp
